Project files updated

--- a/n01354605_assignment1-A/scuba-diving-booking.html
+++ b/n01354605_assignment1-A/scuba-diving-booking.html
@@ -1,10 +1,167 @@
 ﻿<!DOCTYPE html>
-<html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        .register-container {
+            padding: 16px;
+        }
+
+        input[type=text],
+        input[type=email],
+        input[type=number],
+        input[type=date],
+        .radio-inputs,
+        .select-inputs {
+            width: 100%;
+            padding: 15px;
+            margin: 5px 0 22px 0;
+            display: block;
+            border: none;
+            background: #f1f1f1;
+        }
+
+
+        label {
+            color: aqua;
+        }
+
+        body {
+            background-color: #151212;
+            margin: 0;
+        }
+
+        h1 {
+            color: #8cfffb;
+            text-shadow: 2px 2px #1f1e1e;
+            position: absolute;
+            left: 40%;
+        }
+
+        .main-container {
+            width: 70%;
+            //display: block;
+            margin: auto;
+        }
+
+        .terms-conditions-link {
+            color: aquamarine;
+        }
+
+        .header-bg-image {
+            height: 550px;
+            width: 100%;
+            margin: auto;
+            display: block;
+        }
+
+        .register-btn {
+            margin-top: 30px;
+            padding: 5px;
+        }
+    </style>
     <meta charset="utf-8" />
-    <title></title>
+    <title>
+        Book
+    </title>
 </head>
+
 <body>
-    <p>Hello</p>
+    <h1 align="center"><u>Coral Scuba Drive</u></h1>
+    <img src="reef1.jpg" class="header-bg-image" />
+    <div class="main-container">
+        <h2 style="color:aquamarine">Who is eligible to dive?</h2>
+        <p style="color:aqua; font-size:20px">
+            If you have always wanted to take scuba diving lessons, experience unparalleled adventure and see the world
+            underneath the waves, this is the place it starts. Get your scuba diving certificate with the Coral Scuba
+            Dive open water diver course. To sign up, you need to be 15 years old or older.
+            You need enough swimming capabilities and want to be suitable in bodily health.
+        </p>
+        <form action="https://postman-echo.com/post" method="post">
+            <div class="register-container">
+                <h2 style="color:aquamarine">Register</h2>
+                <p style="color:aqua; font-size:20px">Please fill in this form to book your diving session.</p>
+                <hr>
+                <div>
+                    <label for="fname"><b>First Name</b></label>
+                    <input type="text" placeholder="First Name" name="fname" required />
+                </div>
+                <div>
+                    <label for="lname"><b>Last Name</b></label>
+                    <input type="text" placeholder="Last Name" name="lname" required />
+                </div>
+                <div>
+                    <label for="email"><b>E-mail</b></label>
+                    <input type="email" placeholder="E-mail" name="email" required />
+                </div>
+                <div>
+                    <label for="mobile"><b>Mobile No.</b></label>
+                    <input type="number" placeholder="Mobile No" name="mobile" required />
+                </div>
+                <div>
+                    <label for="gender"><b>Gender</b></label>
+                    <div class="radio-inputs">
+                        <section><input type="radio" name="gender" value="male" />Male</section>
+                        <section><input type="radio" name="gender" value="female" />Female</section>
+                    </div>
+                </div>
+                <div>
+                    <label for="birthdate"><b>Date of Birth</b></label>
+                    <input type="date" name="bday" required />
+                </div>
+                <div>
+                    <label for="location"><b>Location of dive</b></label>
+                    <select name="location" id="location" class="select-inputs">
+                        <option value="toronto">Toronto</option>
+                        <option value="mississauga">Mississauga</option>
+                        <option value="brampton">Brampton</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="date_of_booking"><b>Booking Date</b></label>
+                    <input type="date" name="booking_date" required />
+                </div>
+                <div>
+                    <label for="time"><b>Choose time</b></label>
+                    <div class="radio-inputs">
+                        <section><input type="radio" name="time" value="8-9" />8:00AM to 9:00AM</section>
+                        <section><input type="radio" name="time" value="11-12" />11:00AM to 12:00PM</section>
+                        <section><input type="radio" name="time" value="3-4" />3:00PM to 4:00PM</section>
+                        <section><input type="radio" name="time" value="5-6" />5:00PM to 6:00PM</section>
+                    </div>
+                </div>
+                <div>
+                    <label for="state"><b>State</b></label>
+                    <input type="text" placeholder="State" name="state" required />
+                </div>
+                <div>
+                    <label for="city"><b>City</b></label>
+                    <input type="text" placeholder="City" name="city" required />
+                </div>
+                <div>
+                    <label for="street"><b>Street Address</b></label>
+                    <input type="text" placeholder="Street Address" name="street" required />
+                </div>
+                <div>
+                    <label for="zip"><b>Zip Code</b></label>
+                    <input type="text" placeholder="Zip-code" name="zip" required />
+                </div>
+                <div>
+                    <input type="checkbox" name="news" id="news" />
+                    <label for="news">I want to receive news about Coral Scuba Dive through mail. </label>
+                </div>
+                <div>
+                    <input type="checkbox" name="terms" id="terms" required />
+                    <label for="terms">I agree to <a href="terms.html" class="terms-conditions-link">terms and conditions.</a></label>
+                </div>
+                <button type="submit" class="register-btn">Register</button>
+                <hr>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
