--- a/n01354605_assignment1-A/scuba-diving-booking.html
+++ b/n01354605_assignment1-A/scuba-diving-booking.html
@@ -71,7 +71,7 @@
 </head>
 
 <body>
-    <h1 align="center"><u>Coral Scuba Drive</u></h1>
+    <h1 align="center"><u>Coral Scuba Dive</u></h1>
     <img src="reef1.jpg" class="header-bg-image" />
     <div class="main-container">
         <h2 style="color:aquamarine">Who is eligible to dive?</h2>
