--- a/n01354605_assignment1-A/scuba-diving-booking.html
+++ b/n01354605_assignment1-A/scuba-diving-booking.html
@@ -87,20 +87,29 @@
                 <p style="color:aqua; font-size:20px">Please fill in this form to book your diving session.</p>
                 <hr>
                 <div>
+                    <label for="no_registrants"><b>Number of registrants:</b></label>
+                    <select name="no_registrants" id="no_registrants" class="select-inputs">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                    </select>
+                </div>
+                <div>
                     <label for="fname"><b>First Name</b></label>
-                    <input type="text" placeholder="First Name" name="fname" required />
+                    <input type="text" placeholder="First Name" name="fname" />
                 </div>
                 <div>
                     <label for="lname"><b>Last Name</b></label>
-                    <input type="text" placeholder="Last Name" name="lname" required />
+                    <input type="text" placeholder="Last Name" name="lname" />
                 </div>
                 <div>
                     <label for="email"><b>E-mail</b></label>
-                    <input type="email" placeholder="E-mail" name="email" required />
+                    <input type="email" placeholder="E-mail" name="email" />
                 </div>
                 <div>
                     <label for="mobile"><b>Mobile No.</b></label>
-                    <input type="number" placeholder="Mobile No" name="mobile" required />
+                    <input type="number" placeholder="Mobile No" name="mobile" />
                 </div>
                 <div>
                     <label for="gender"><b>Gender</b></label>
@@ -111,7 +120,7 @@
                 </div>
                 <div>
                     <label for="birthdate"><b>Date of Birth</b></label>
-                    <input type="date" name="bday" required />
+                    <input type="date" name="bday" />
                 </div>
                 <div>
                     <label for="location"><b>Location of dive</b></label>
@@ -122,8 +131,17 @@
                     </select>
                 </div>
                 <div>
-                    <label for="date_of_booking"><b>Booking Date</b></label>
-                    <input type="date" name="booking_date" required />
+                    <label for="date_available"><b>Available Date</b></label>
+                    <select name="date_available" id="date_available" class="select-inputs">
+                        <option value="Oct-05-2019">Oct-05-2019</option>
+                        <option value="Nov-02-2019">Nov-02-2019</option>
+                        <option value="Nov-09-2019">Nov-09-2019</option>
+                        <option value="Nov-16-2019">Nov-16-2019</option>
+                        <option value="Nov-23-2019">Nov-23-2019</option>
+                        <option value="Nov-30-2019">Nov-30-2019</option>
+                        <option value="Dec-07-2019">Dec-07-2019</option>
+                        <option value="Dec-14-2019">Dec-14-2019</option>
+                    </select>
                 </div>
                 <div>
                     <label for="time"><b>Choose time</b></label>
@@ -136,19 +154,23 @@
                 </div>
                 <div>
                     <label for="state"><b>State</b></label>
-                    <input type="text" placeholder="State" name="state" required />
+                    <input type="text" placeholder="State" name="state" />
                 </div>
                 <div>
                     <label for="city"><b>City</b></label>
-                    <input type="text" placeholder="City" name="city" required />
+                    <input type="text" placeholder="City" name="city" />
                 </div>
                 <div>
                     <label for="street"><b>Street Address</b></label>
-                    <input type="text" placeholder="Street Address" name="street" required />
+                    <input type="text" placeholder="Street Address" name="street" />
                 </div>
                 <div>
                     <label for="zip"><b>Zip Code</b></label>
-                    <input type="text" placeholder="Zip-code" name="zip" required />
+                    <input type="text" placeholder="Zip-code" name="zip" />
+                </div>
+                <div>
+                    <label for="price"><b>Total amount</b></label>
+                    
                 </div>
                 <div>
                     <input type="checkbox" name="news" id="news" />
