added new field

--- a/n01354605_assignment1-A/scuba-diving-booking.html
+++ b/n01354605_assignment1-A/scuba-diving-booking.html
@@ -131,7 +131,7 @@
                     </select>
                 </div>
                 <div>
-                    <label for="date_available"><b>Available Date</b></label>
+                    <label for="date_available"><b>Available Dates</b></label>
                     <select name="date_available" id="date_available" class="select-inputs">
                         <option value="Oct-05-2019">Oct-05-2019</option>
                         <option value="Nov-02-2019">Nov-02-2019</option>
