--- a/n01354605_assignment1-A/scuba-diving-booking.html
+++ b/n01354605_assignment1-A/scuba-diving-booking.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <style>
         * {
@@ -25,7 +24,6 @@
             background: #f1f1f1;
         }
 
-
         label {
             color: aqua;
         }
@@ -44,7 +42,6 @@
 
         .main-container {
             width: 70%;
-            //display: block;
             margin: auto;
         }
 
@@ -71,7 +68,7 @@
 </head>
 
 <body>
-    <h1 align="center"><u>Coral Scuba Dive</u></h1>
+    <h1 align="center"><u>Coral Scuba Drive</u></h1>
     <img src="reef1.jpg" class="header-bg-image" />
     <div class="main-container">
         <h2 style="color:aquamarine">Who is eligible to dive?</h2>
@@ -87,97 +84,75 @@
                 <p style="color:aqua; font-size:20px">Please fill in this form to book your diving session.</p>
                 <hr>
                 <div>
-                    <label for="no_registrants"><b>Number of registrants:</b></label>
-                    <select name="no_registrants" id="no_registrants" class="select-inputs">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                    </select>
+                    <label for="diver_fname"><b>First Name</b></label>
+                    <input type="text" id="diver_fname" placeholder="First Name" name="diver_firstname" />
                 </div>
                 <div>
-                    <label for="fname"><b>First Name</b></label>
-                    <input type="text" placeholder="First Name" name="fname" />
+                    <label for="diver_lname"><b>Last Name</b></label>
+                    <input type="text" id="diver_lname" placeholder="Last Name" name="diver_lastname" />
                 </div>
                 <div>
-                    <label for="lname"><b>Last Name</b></label>
-                    <input type="text" placeholder="Last Name" name="lname" />
+                    <label for="diver_email"><b>E-mail</b></label>
+                    <input type="email" id="diver_email" placeholder="E-mail" name="diver_email" />
                 </div>
                 <div>
-                    <label for="email"><b>E-mail</b></label>
-                    <input type="email" placeholder="E-mail" name="email" />
-                </div>
-                <div>
-                    <label for="mobile"><b>Mobile No.</b></label>
-                    <input type="number" placeholder="Mobile No" name="mobile" />
+                    <label for="diver_mobile"><b>Mobile No.</b></label>
+                    <input type="number" id="diver_mobile" placeholder="Mobile No" name="diver_mobile" />
                 </div>
                 <div>
                     <label for="gender"><b>Gender</b></label>
                     <div class="radio-inputs">
-                        <section><input type="radio" name="gender" value="male" />Male</section>
-                        <section><input type="radio" name="gender" value="female" />Female</section>
+                        <section><input type="radio" name="gender" id="male" value="male" checked />Male</section>
+                        <section><input type="radio" name="gender" id="female" value="female" />Female</section>
                     </div>
                 </div>
                 <div>
-                    <label for="birthdate"><b>Date of Birth</b></label>
-                    <input type="date" name="bday" />
+                    <label for="diver_age"><b>Age</b></label>
+                    <input type="number" id="diver_age" name="diver_age" />
                 </div>
                 <div>
-                    <label for="location"><b>Location of dive</b></label>
-                    <select name="location" id="location" class="select-inputs">
-                        <option value="toronto">Toronto</option>
-                        <option value="mississauga">Mississauga</option>
-                        <option value="brampton">Brampton</option>
+                    <label for="booking_location"><b>Location of dive</b></label>
+                    <select name="booking_location" id="booking_location" class="select-inputs">
+                        <option value="toronto" id="location_toronto">Toronto</option>
+                        <option value="mississauga" id="location_mississauga">Mississauga</option>
+                        <option value="brampton" id="location_brampton">Brampton</option>
                     </select>
                 </div>
                 <div>
-                    <label for="date_available"><b>Available Dates</b></label>
-                    <select name="date_available" id="date_available" class="select-inputs">
-                        <option value="Oct-05-2019">Oct-05-2019</option>
-                        <option value="Nov-02-2019">Nov-02-2019</option>
-                        <option value="Nov-09-2019">Nov-09-2019</option>
-                        <option value="Nov-16-2019">Nov-16-2019</option>
-                        <option value="Nov-23-2019">Nov-23-2019</option>
-                        <option value="Nov-30-2019">Nov-30-2019</option>
-                        <option value="Dec-07-2019">Dec-07-2019</option>
-                        <option value="Dec-14-2019">Dec-14-2019</option>
-                    </select>
+                    <label for="booking_date"><b>Booking Date</b></label>
+                    <input type="date" id="booking_date" name="booking_date" />
                 </div>
                 <div>
-                    <label for="time"><b>Choose time</b></label>
+                    <label for="booking_time"><b>Choose time</b></label>
                     <div class="radio-inputs">
-                        <section><input type="radio" name="time" value="8-9" />8:00AM to 9:00AM</section>
-                        <section><input type="radio" name="time" value="11-12" />11:00AM to 12:00PM</section>
-                        <section><input type="radio" name="time" value="3-4" />3:00PM to 4:00PM</section>
-                        <section><input type="radio" name="time" value="5-6" />5:00PM to 6:00PM</section>
+                        <section><input type="radio" id="800_900_book_time" name="booking_time" value="800-900" />8:00AM to 9:00AM</section>
+                        <section><input type="radio" id="1100_1200_book_time" name="booking_time" value="1100-1200" />11:00AM to 12:00PM</section>
+                        <section><input type="radio" id="1500_1600_book_time" name="booking_time" value="1500-1600" />3:00PM to 4:00PM</section>
+                        <section><input type="radio" id="1700_1800_book_time" name="booking_time" value="1700-1800" />5:00PM to 6:00PM</section>
                     </div>
                 </div>
                 <div>
-                    <label for="state"><b>State</b></label>
-                    <input type="text" placeholder="State" name="state" />
+                    <label for="diver_state"><b>State</b></label>
+                    <input type="text" id="diver_state" placeholder="State" name="state" />
                 </div>
                 <div>
-                    <label for="city"><b>City</b></label>
-                    <input type="text" placeholder="City" name="city" />
+                    <label for="diver_city"><b>City</b></label>
+                    <input type="text" id="diver_city" placeholder="City" name="city" />
                 </div>
                 <div>
-                    <label for="street"><b>Street Address</b></label>
-                    <input type="text" placeholder="Street Address" name="street" />
+                    <label for="diver_street_address"><b>Street Address</b></label>
+                    <input type="text" id="diver_street_address" placeholder="Street Address" name="street_address" />
                 </div>
                 <div>
-                    <label for="zip"><b>Zip Code</b></label>
-                    <input type="text" placeholder="Zip-code" name="zip" />
-                </div>
-                <div>
-                    <label for="price"><b>Total amount</b></label>
-                    
+                    <label for="diver_zip_code"><b>Zip Code</b></label>
+                    <input type="text" id="diver_zip_code" placeholder="Zip-code" name="zip_code" />
                 </div>
                 <div>
                     <input type="checkbox" name="news" id="news" />
                     <label for="news">I want to receive news about Coral Scuba Dive through mail. </label>
                 </div>
                 <div>
-                    <input type="checkbox" name="terms" id="terms" required />
+                    <input type="checkbox" name="terms" id="terms" />
                     <label for="terms">I agree to <a href="terms.html" class="terms-conditions-link">terms and conditions.</a></label>
                 </div>
                 <button type="submit" class="register-btn">Register</button>
